--- a/style.css
+++ b/style.css
@@ -21,54 +21,51 @@ body {
   display: grid;
   place-content: center;
   min-height: 100vh;
+  line-height: 1.2;
 }
 .container {
   margin: 1.5rem 0.5rem;
   padding: 0;
   background-color: var(--White);
   border-radius: 0.5rem;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 40% 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column wrap;
 }
-.image-container {
+.image-container,
+.product-name h2,
+.product-desc,
+.price,
+.price h3,
+.price h4,
+.button {
   margin: 0;
   padding: 0;
-  grid-area: 1 / 1 / 2 / 2;
 }
 .image-container img {
+  max-width: 650px;
   width: 100%;
-  height: 100%;
   object-fit: cover;
   border-radius: 0.5rem 0.5rem 0 0;
 }
 .productinfo-container {
   margin: 0;
   padding: 1rem;
-  grid-area: 2 / 1 / 3 / 2;
-  display: flex;
-  flex-flow: column wrap;
-  gap: 0;
 }
 .product-type h1 {
   font-family: var(--montserat);
   font-weight: 500;
-  font-size: 100%;
+  font-size: 1rem;
   text-transform: uppercase;
   color: var(--Darkgrayishblue);
   letter-spacing: 6px;
 }
 .product-name h2 {
-  margin: 0;
-  padding: 0;
   font-family: var(--fraunces);
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: 700;
   color: var(--darkblue);
-}
-.product-desc {
-  margin: 0;
-  padding: 0;
 }
 .product-desc p {
   font-family: var(--montserat);
@@ -78,7 +75,6 @@ body {
   line-height: 1.75;
 }
 .price {
-  margin: 0;
   padding-bottom: 0.5rem;
   display: flex;
   flex-flow: row wrap;
@@ -87,8 +83,6 @@ body {
   gap: 1rem;
 }
 .price h3 {
-  margin: 0;
-  padding: 0;
   color: var(--Darkcyan);
   font-weight: 700;
   font-size: 2rem;
@@ -100,8 +94,6 @@ body {
   text-decoration-line: line-through;
 }
 .button {
-  margin: 0;
-  padding: 0;
   display: flex;
   flex-flow: row wrap;
   gap: 2rem;
@@ -124,33 +116,34 @@ body {
 .button img {
   margin-right: 0.5rem;
 }
-@media (min-width: 750px) {
+@media (min-width: 650px) {
   .container {
     width: 600px;
     height: 450px;
     margin: 120px auto;
     padding: 0;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
   }
 
   .image-container {
-    grid-column: 1/2;
-    grid-row: 1/2;
+    max-height: 450px;
+    height: 100%;
+    grid-column: 1 / 2;
   }
   .image-container img {
     height: 100%;
     border-radius: 0.5rem;
   }
   .productinfo-container {
-    grid-column: 2/3;
-    grid-row: 1/2;
+    grid-column: 2 / 3;
     padding: 1rem;
     margin-left: 1.2rem;
     margin-right: 0.5rem;
   }
   .product-type h1 {
-    font-size: 0.8rem;
+    margin: 0;
+    font-size: 1rem;
     letter-spacing: 5px;
   }
   .product-name h2 {
@@ -159,7 +152,7 @@ body {
     font-size: 2rem;
   }
   .button {
-    margin: 0.5rem 0 0.5rem 0;
+    margin-top: 0.5rem;
   }
   footer {
     text-align: center;
